nginx/example_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: APPLICATION-ingress
  namespace: NAMESPACE_NAME
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: "HOST_URL"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: SERVICE_NAME
          servicePort: SERVICE_PORT
